--- a/yadisk-client/src/index.css
+++ b/yadisk-client/src/index.css
@@ -2,6 +2,7 @@ body {
   margin-left: 0;
   margin-right: 0;
   margin-top: 0;
+  padding-bottom: 50px;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
